syntax = "proto3";

package proto;

option go_package = ".;proto";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message SavedUser {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string avatar = 6;
  int64 birthday = 7;
  string bio = 8;
  string facebook = 9;
  string instagram = 10;
  string twitter = 11;
  int64 created_at = 12;
  int64 updated_at = 13;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  SavedUser user = 1;
  string token = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  SavedUser user = 1;
  string token = 2;
}